--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev:server": "ts-node-dev --respawn --transpileOnly src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "build": "sucrase ./src -d ./dist --transforms typescript,imports"
   },
   "license": "MIT",
   "dependencies": {
-    "@googlemaps/google-maps-services-js": "^2.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
+    "sucrase": "^3.15.0",
     "yup": "^0.28.1"
   },
   "devDependencies": {
@@ -31,8 +32,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^1.19.1",
-    "ts-node-dev": "^1.0.0-pre.44",
+    "nodemon": "^2.0.4",
     "typescript": "^3.8.3"
   }
 }
